feat(sykes): cmd heater